Updated package.json description of the project and also updated dependencies

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "numlinet",
   "version": "1.0.0",
-  "description": "My splendiferous Nuxt.js project",
+  "description": "Personal website of Martin Krajčovič",
   "author": "Martin Krajcovic",
   "private": true,
   "scripts": {
