--- a/package.json
+++ b/package.json
@@ -21,23 +21,24 @@
     }
   },
   "dependencies": {
+    "@nuxt/content": "^1.11.1",
     "@nuxtjs/axios": "^5.9.5",
-    "@nuxtjs/pwa": "^3.0.0-0",
     "nuxt": "^2.11.0"
   },
   "devDependencies": {
-    "@nuxtjs/eslint-config": "^1.0.1",
-    "@nuxtjs/eslint-module": "^1.0.0",
+    "@babel/core": "^7.12.9",
+    "@babel/eslint-parser": "^7.12.1",
+    "@nuxtjs/eslint-config": "^5.0.0",
+    "@nuxtjs/eslint-module": "^3.0.0",
     "@nuxtjs/tailwindcss": "^1.3.0",
-    "babel-eslint": "^10.0.3",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^4.3.0",
-    "eslint-loader": "^3.0.3",
-    "eslint-plugin-nuxt": ">=0.4.2",
+    "eslint": "^7.14.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-vue": "^6.1.2",
-    "husky": "^2.6.0",
-    "lint-staged": "^8.2.1",
-    "prettier": "^1.19.1"
+    "eslint-plugin-vue": "^7.1.0",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.5.2",
+    "prettier": "^2.2.1"
   }
 }
