--- a/package.json
+++ b/package.json
@@ -23,24 +23,25 @@
   "dependencies": {
     "@nuxt/content": "^1.11.1",
     "@nuxtjs/axios": "^5.9.5",
+    "dayjs": "^1.10.4",
     "nuxt": "^2.11.0",
     "nuxt-ackee": "^2.0.0"
   },
   "devDependencies": {
-    "webpack": "^4.0.0",
     "@babel/core": "^7.12.9",
     "@babel/eslint-parser": "^7.12.1",
+    "@nuxtjs/eslint-config": "^5.0.0",
+    "@nuxtjs/eslint-module": "^3.0.0",
     "@nuxtjs/tailwindcss": "^1.3.0",
     "eslint": "^7.14.0",
-    "eslint-loader": "^4.0.2",
-    "@nuxtjs/eslint-module": "^3.0.0",
-    "@nuxtjs/eslint-config": "^5.0.0",
-    "eslint-plugin-nuxt": "^2.0.0",
-    "eslint-plugin-vue": "^7.1.0",
-    "prettier": "^2.2.1",
-    "eslint-plugin-prettier": "^3.1.2",
     "eslint-config-prettier": "^6.15.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-nuxt": "^2.0.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-vue": "^7.1.0",
     "husky": "^4.3.0",
-    "lint-staged": "^10.5.2"
+    "lint-staged": "^10.5.2",
+    "prettier": "^2.2.1",
+    "webpack": "^4.0.0"
   }
 }
